Chapter 4.5: Designing a database model

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,9 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: snippetbox
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: web
+      MYSQL_PASSWORD: web
     volumes:
       - ./dbdata:/var/lib/mysql/
